cluster/apps/apps/pgmqtt/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pgmqtt
  namespace: default
spec:
  description: Allow MQTT clients, metrics, PostgreSQL and API leader election
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: pgmqtt
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: home-assistant
        - matchLabels:
            app.kubernetes.io/instance: zigbee2mqtt
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: default-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  enableDefaultDeny:
    ingress: true
    egress: true
  log:
    value: pgmqtt
